--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,21 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="">CodeLink</a>
-    </div>
-    <div *ngIf="isLoggedIn" class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="" (click)="logout()">Logout</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<!--The whole content below can be removed with the new code.-->
+<md-toolbar>
+  <a md-button [routerLink]="dashboard" class="font-20">CodeLink</a>
+  <span class="fill-space"></span>
+  <button *ngIf="isLoggedIn" md-button [mdMenuTriggerFor]="menu" class="reg-text font-20">
+    <span [innerText]="authService.displayName"></span>
+  </button>
+  <md-menu #menu="mdMenu">
+    <button md-menu-item >
+      <md-icon>account_circle</md-icon>
+      <span>My Account </span>
+    </button>
+    <button md-menu-item (click)="logout()">
+      <md-icon>exit_to_app</md-icon>
+      <span>Sign out</span>
+    </button>
+  </md-menu>
+</md-toolbar>
 <div class="app-content">
   <router-outlet></router-outlet>
 </div>
