--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The whole content below can be removed with the new code.-->
-<md-toolbar>
+<md-toolbar color="primary">
   <a md-button [routerLink]="dashboard" class="font-20">CodeLink</a>
   <span class="fill-space"></span>
   <button *ngIf="isLoggedIn" md-button [mdMenuTriggerFor]="menu" class="reg-text font-20">
