--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,24 +9,24 @@
         </md-card-title>
       </md-card-header>
       <md-card-content>
-        <md-input-container class="full-width" dividerColor="accent">
-          <input mdInput #email type="email" placeholder="Email" />
+        <md-input-container class="full-width" dividerColor="primary">
+          <input mdInput [(ngModel)]="email" type="email" placeholder="Email" />
         </md-input-container>
-        <md-input-container class="full-width" dividerColor="accent">
-          <input mdInput #password type="password" placeholder="Password"/>
+        <md-input-container class="full-width" dividerColor="primary">
+          <input mdInput [(ngModel)]="password" type="password" placeholder="Password"/>
         </md-input-container>
       </md-card-content>
       <md-card-actions>
         <md-grid-list cols="2" rowHeight="60px;">
           <md-grid-tile [colspan]="2" [rowspan]="1">
-            <button md-raised-button color="accent" (click)="loginWithEmail()" class="full-width">Submit</button>
-          </md-grid-tile>
-          <md-grid-tile [colspan]="2" [rowspan]="1">
-            <button md-raised-button (click)="loginWithGoogle()" class="full-width" color="warn">Login with Google</button>
+            <button md-raised-button (click)="loginWithEmail()" class="full-width" color="primary" >Submit</button>
           </md-grid-tile>
           <!--<md-grid-tile [colspan]="2" [rowspan]="1">
-            <button md-raised-button (click)="loginWithFacebook()" class="full-width">Facebook</button>
+            <button md-raised-button (click)="loginWithFacebook()" class="full-width fb-blue">Login with Facebook</button>
           </md-grid-tile>-->
+          <md-grid-tile [colspan]="2" [rowspan]="1">
+            <button md-raised-button (click)="loginWithGoogle()" class="full-width" color="warn">Sign in with Google</button>
+          </md-grid-tile>
         </md-grid-list>
       </md-card-actions>
     </md-card>
