--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,12 @@
 
-<md-grid-list cols="6" rowHeight="200px">
+<md-grid-list cols="6" rowHeight="250px">
   <md-grid-tile [colspan]="1" [rowspan]="2"></md-grid-tile>
   <md-grid-tile [colspan]="4" [rowspan]="2">
     <md-card>
       <md-card-header>
         <md-card-title>
-          <span class="font-20">Sign in</span>
+          <span *ngIf="!newAccount" class="font-20" style="text-align: center;">Sign in</span>
+          <span *ngIf="newAccount" class="font-20">Create an account</span>
         </md-card-title>
       </md-card-header>
       <md-card-content>
@@ -18,14 +19,26 @@
       </md-card-content>
       <md-card-actions>
         <md-grid-list cols="2" rowHeight="60px;">
-          <md-grid-tile [colspan]="2" [rowspan]="1">
+          <md-grid-tile *ngIf="!newAccount" [colspan]="2" [rowspan]="1">
             <button md-raised-button (click)="loginWithEmail()" class="full-width" color="primary" >Submit</button>
           </md-grid-tile>
-          <!--<md-grid-tile [colspan]="2" [rowspan]="1">
-            <button md-raised-button (click)="loginWithFacebook()" class="full-width fb-blue">Login with Facebook</button>
-          </md-grid-tile>-->
-          <md-grid-tile [colspan]="2" [rowspan]="1">
+          <md-grid-tile *ngIf="!newAccount" [colspan]="2" [rowspan]="1">
             <button md-raised-button (click)="loginWithGoogle()" class="full-width" color="warn">Sign in with Google</button>
+          </md-grid-tile>
+          <md-grid-tile *ngIf="!newAccount" [colspan]="2" [rowspan]="1">
+            <button md-button (click)="toggleSignUp()" class="full-width a-button">Create a new account</button>
+          </md-grid-tile>
+          <md-grid-tile *ngIf="newAccount" [colspan]="2" [rowspan]="1">
+            <button md-raised-button (click)="createAccount()" class="full-width" color="primary">Register</button>
+          </md-grid-tile>
+          <md-grid-tile *ngIf="newAccount" [colspan]="2" [rowspan]="1">
+            <button md-raised-button (click)="loginWithGoogle()" class="full-width" color="warn">Sign up with Google</button>
+          </md-grid-tile>
+          <md-grid-tile *ngIf="newAccount" [colspan]="2" [rowspan]="1">
+            <button md-button (click)="toggleSignUp()" class="full-width a-button">Already have an account</button>
+          </md-grid-tile>
+          <md-grid-tile *ngIf="displayError" [colspan]="2" [rowspan]="1">
+            <p class="full-width error-txt txt-center font-14" [innerText]="errorMsg"></p>
           </md-grid-tile>
         </md-grid-list>
       </md-card-actions>
