Scaffolded the dialog box
Added some input fields and select box. Also renamed the dialog to Listing Dialog, this is only on the frontend though

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <a md-button [routerLink]="dashboard" class="font-20">CodeLink</a>
   <button md-button class="reg-text font-18" (click)="openDialog()">
     <md-icon>add</md-icon>
-    <span>New Post</span>
+    <span>New Listing</span>
   </button>
   <span class="fill-space"></span>
   <button *ngIf="isLoggedIn" md-button [mdMenuTriggerFor]="menu" class="reg-text font-20">
