--- a/src/app/postDialog/postDialog.component.html
+++ b/src/app/postDialog/postDialog.component.html
@@ -1,29 +1,34 @@
 <!-- may need to wrap all this in a form -->
-<h2>Create a new listing</h2>
+<h2 md-dialog-title>Create a new listing</h2>
 
-<md-input-container>
-  <input mdInput placeholder="Tile" value={{this.post.title}} [(ngModel)]=this.post.title/>
-</md-input-container>
-<br />
-<md-input-container>
-  <input mdInput placeholder="Description" value={{this.post.description}} [(ngModel)]=this.post.description/>
-</md-input-container>
-<br />
-
-<md-select placeholder="Offer" [(ngModel)]=this.post.offer>
-  <md-option value="Private">
-    Private
-  </md-option>
-  <md-option value="Salary">
-    Salary
-  </md-option>
-  <md-option value="Hourly">
-    Hourly
-  </md-option>
-  <md-option value="Equity">
-    Equity
-  </md-option>
-</md-select>
-
-<br />
-<button md-raised-button (click)="submitPost()">Submit</button>
+<form>
+  <div>
+    <md-input-container class="form-fields">
+      <input mdInput placeholder="Tile" value={{this.post.title}} [(ngModel)]=this.post.title name="Title" />
+    </md-input-container>
+  </div>
+  <div>
+    <md-input-container class="form-fields">
+      <textarea mdInput placeholder="Description" value={{this.post.description}} [(ngModel)]=this.post.description name="Description"></textarea>
+    </md-input-container>
+  </div>
+  <div class="form-select">
+    <md-select placeholder="Offer" [(ngModel)]=this.post.offer name="Offer">
+      <md-option value="Private">
+        Private
+      </md-option>
+      <md-option value="Salary">
+        Salary
+      </md-option>
+      <md-option value="Hourly">
+        Hourly
+      </md-option>
+      <md-option value="Equity">
+        Equity
+      </md-option>
+    </md-select>
+  </div>
+  <md-dialog-actions align="end">
+    <button md-raised-button (click)="submitPost()">Submit</button>
+  </md-dialog-actions>
+</form>
