--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <!--The whole content below can be removed with the new code.-->
+<toaster-container [toasterconfig]="toastConfig"></toaster-container>
 <md-toolbar color="primary">
   <a md-button [routerLink]="dashboard" class="font-20">CodeLink</a>
+  <button md-button class="reg-text font-18">
+    <md-icon>people</md-icon>
+    <span>Browse</span>
+  </button>
   <button md-button class="reg-text font-18" (click)="openDialog()">
     <md-icon>add</md-icon>
     <span>New Listing</span>
