--- a/src/codelink-app-theme.scss
+++ b/src/codelink-app-theme.scss
@@ -2,7 +2,7 @@
 
 @include mat-core();
 
-$primary: mat-palette($mat-blue-grey);
+$primary: mat-palette($mat-teal, 700, 500, 900);
 $accent: mat-palette($mat-deep-orange);
 $warn: mat-palette($mat-red);
 
@@ -10,12 +10,12 @@ $theme: mat-light-theme($primary, $accent, $warn);
 
 @include angular-material-theme($theme);
 
-.m2app-dark {
-  $dark-primary: mat-palette($mat-pink, 700, 500, 900);
-  $dark-accent:  mat-palette($mat-blue-grey, A200, A100, A400);
-  $dark-warn:    mat-palette($mat-deep-orange);
+// .m2app-dark {
+//   $dark-primary: mat-palette($mat-pink, 700, 500, 900);
+//   $dark-accent:  mat-palette($mat-blue-grey, A200, A100, A400);
+//   $dark-warn:    mat-palette($mat-deep-orange);
 
-  $dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
+//   $dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
 
-  @include angular-material-theme($dark-theme);
-}
+//   @include angular-material-theme($dark-theme);
+// }
