--- a/src/app/components/postDialog/postDialog.component.html
+++ b/src/app/components/postDialog/postDialog.component.html
@@ -1,4 +1,4 @@
-<h2 md-dialog-title>Create a new listing</h2>
+<h2 md-dialog-title>New Listing</h2>
 <form>
   <div>
     <md-input-container class="form-fields full-width">
@@ -26,7 +26,7 @@
       </md-option>
     </md-select>
   </div>
-  <md-dialog-actions align="end">
-    <button md-raised-button (click)="submitPost()">Submit</button>
+  <md-dialog-actions align="center">
+    <button md-raised-button color="primary" (click)="submitPost()" class="full-width">Submit</button>
   </md-dialog-actions>
 </form>
