--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <!--The whole content below can be removed with the new code.-->
-<toaster-container [toasterconfig]="toastConfig"></toaster-container>
 <md-toolbar color="primary" *ngIf="!loading">
   <button md-button routerLink="" class="font-20 m-l">
     <span>CodeLink</span>
@@ -10,21 +9,22 @@
   </button>
   <!-- fill space -->
   <span class="fill-space"></span>
-  <!-- fill space -->
-  <button md-button *ngIf="!isLoggedIn" routerLink="login" class="reg-text font-18 m-r-2 border-white">
+  <!-- Not Logged In -->
+  <button md-button *ngIf="!isLoggedIn" (click)="openLoginDialog()" class="reg-text font-18 m-r-2 border-white">
     <span>Login</span>
   </button>
-  <button md-raised-button *ngIf="!isLoggedIn" routerLink="login" class="reg-text font-18 m-r-2" color="accent">
+  <button md-raised-button *ngIf="!isLoggedIn" routerLink="register" class="reg-text font-18 m-r-2" color="accent">
     <span>Sign up</span>
   </button>
-  <button md-button *ngIf="isLoggedIn" (click)="openDialog()" class="reg-text font-18 m-r-2 border-white">
+  <!-- Logged In -->
+  <button md-button *ngIf="isLoggedIn" (click)="openPostDialog()" class="reg-text font-18 m-r-2 border-white">
     <md-icon>add</md-icon>
     <span>New Listing</span>
   </button>
   <md-menu #menu="mdMenu">
     <button md-menu-item >
       <md-icon>account_circle</md-icon>
-      <span>My Account </span>
+      <span>My Account</span>
     </button>
     <button md-menu-item (click)="logout()">
       <md-icon>exit_to_app</md-icon>
@@ -35,6 +35,7 @@
     <span [innerText]="displayName"></span>
   </button>
 </md-toolbar>
+<toaster-container [toasterconfig]="toastConfig" style="margin-top:50px;"></toaster-container>
 <div class="app-content">
   <router-outlet></router-outlet>
 </div>
