--- a/src/app/components/landingPage/landingPage.component.html
+++ b/src/app/components/landingPage/landingPage.component.html
@@ -1,1 +1,3 @@
-<h1>Landing page</h1>
+<div id="banner">
+    <img src='https://static.pexels.com/photos/39284/macbook-apple-imac-computer-39284.jpeg'/> 
+</div>
