--- a/src/app/components/ViewPosts/ViewPosts.component.html
+++ b/src/app/components/ViewPosts/ViewPosts.component.html
@@ -1,5 +1,6 @@
-<ul>
-  <li *ngFor="let post of listings"> 
-    {{ post.title }}
-  </li>
- </ul>
+<form (submit)="submit()">
+  <md-input-container>
+    <input mdInput placeholder="Enter a school" [(ngModel)]="this.searchparam" name="schoolname"/>
+    <button type="submit" style="display:none"></button>
+  </md-input-container>
+</form>
